Require explicit declaration of Immutable annotation for entities (#309)
* Require explicit declaration of Immutable annotation for entities

* ensure proper table schema is used

* fixed style violations